Prevent button wrapping on older Safari (#2680)

--- a/special-pages/pages/new-tab/app/next-steps-list/components/NextStepsListCard.module.css
+++ b/special-pages/pages/new-tab/app/next-steps-list/components/NextStepsListCard.module.css
@@ -237,4 +237,6 @@
     margin-top: var(--sp-1);
 }
 
-
+.buttonRow button {
+    white-space: nowrap;
+}
